feat[electron]: configure and build Electron App

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- Electron security policy -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
   </head>
   <body>
     <noscript>
