feat[electron]: remove experimental auto updater

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
     <!-- Electron security policy -->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self'"> -->
   </head>
   <body>
     <noscript>
