--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Influx Explorer</title>
+    <title>Time Series Admin</title>
     <!-- Electron security policy -->
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self'"> -->
   </head>
